bugfix: wrap btn container; update readme

--- a/src/assets/styles/page.css
+++ b/src/assets/styles/page.css
@@ -217,6 +217,7 @@ body {
   margin-bottom: 25px;
   display: flex;
   gap: 15px;
+  flex-wrap: wrap;
 }
 
 .page__btn {
